Finished basic app layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <!-- For testing, rightclick on index.html and start live server, start code under this line -->
+    <div class="quiz-app">
+        <h1 class="title">Healthy Diet Quiz</h1>
+        
+        <div class="wrapper">
+            <div>Here is where all parts go!!!</div>
+        </div>
+    </div>
     
 </body>
 </html>
