Added some initial start page content

--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
     <!-- For testing, rightclick on index.html and start live server, start code under this line -->
     <div class="quiz-app">
         <h1 class="title">Healthy Diet Quiz</h1>
-        
+
+        <div class="start">
+            <img src="/Assets/question.jpeg" alt="StartImg">
+            <div class="description">
+                <h1 class="start-title">Test your diet choices</h1>
+                <div class="start-intro-1">A healthy and varied diet is the sum of its parts. There are many ways to build a good diet. </div>
+                <div class="start-intro-2">The most frequent food choices you make in everyday life are decisive. </div>
+                <div class="start-intro-3">This test will give an indicative assessment of the healthiness of your diet. </div>
+                <button>class ="start-button">Start test</button>
+            </div>
+        </div>
+
         <div class="wrapper">
             <div>Here is where all parts go!!!</div>
         </div>
     </div>
-    
-</body>
+
+
+
+    </body>
 </html>
