Modified start part

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,23 @@
     <script defer src="script.js"></script>
     <title>Healthy Diet Quiz App</title>
 </head>
+
 <body>
     <!-- For testing, rightclick on index.html and start live server, start code under this line -->
     <div class="quiz-app">
         <h1 class="title">Healthy Diet Quiz</h1>
-
-        
-
-        <div class="wrapper">
-            <div><div class="start">
-    <img src="/Assets/question.jpeg" alt="StartImg">
-    <div class="description">
-        <h1 class="start-title">Test your diet choices</h1>
-        <div class="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to build a good diet. </div>
-        <div class="start-intro-2">The most frequent food choices you make in everyday life are decisive. </div>
-        <div class="start-intro-3">This test will give an indicative assessment of the healthiness of your diet. </div>
-        <button>Start test</button>
-    </div>
-
+        <div class="start">
+            <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
+            <div class="description">
+                <h1 class="start-title">Test your diet choices</h1>
+                <div class="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
+                    build a good diet. The most frequent food choices you make in everyday life are decisive.</div>
+                <div class="start-intro-2">This test will give an indicative assessment of the healthiness of your diet.
                 </div>
+                <button class="start-btn">Start test</button>
             </div>
         </div>
     </div>
+</body>
 
-
-
-    </body>
 </html>
