--- a/index.html
+++ b/index.html
@@ -12,17 +12,31 @@
 
 <body>
     <!-- For testing, rightclick on index.html and start live server, start code under this line -->
-    <div class="quiz-app">
-        <h1 class="title">Healthy Diet Quiz</h1>
-        <div class="start">
-            <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
-            <div class="description">
-                <h1 class="start-title">Test your diet choices</h1>
-                <div class="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
-                    build a good diet. The most frequent food choices you make in everyday life are decisive.</div>
-                <div class="start-intro-2">This test will give an indicative assessment of the healthiness of your diet.
+    <div id="quiz-app">
+        <h1 id="title">Healthy Diet Quiz</h1>
+        <div id="wrapper">
+            <!-- <div id="start-container">
+                <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
+                <div id="description">
+                    <h1 id="start-title">Test your diet choices</h1>
+                    <div id="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
+                        build a good diet. The most frequent food choices you make in everyday life are decisive.</div>
+                    <div id="start-intro-2">This test will give an indicative assessment of the healthiness of your diet.
+                    </div>
+                    <button id="start-btn">Start test</button>
                 </div>
-                <button class="start-btn">Start test</button>
+            </div> -->
+            
+            <div id="quiz-container">
+                <div id="progress">Question 1/14:</div>
+                <div id="question">Question 1?</div>
+                <div id="answers">
+                    <button class="answer">Answer 1</button>
+                    <button class="answer">Answer 2</button>
+                    <button class="answer">Answer 3</button>
+                </div>
+                <div id="progress-bar">
+                </div>
             </div>
         </div>
     </div>
