Finish start button function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="quiz-app">
         <h1 id="title">Healthy Diet Quiz</h1>
         <div id="wrapper">
-            <!-- <div id="start-container">
+            <div id="start-container">
                 <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
                 <div id="description">
                     <h1 id="start-title">Test your diet choices</h1>
@@ -25,9 +25,9 @@
                     </div>
                     <button id="start-btn">Start test</button>
                 </div>
-            </div> -->
+            </div>
             
-            <div id="quiz-container">
+            <div id="quiz-container" class="hide">
                 <div id="progress">Question 1/14:</div>
                 <div id="question">Question 1?</div>
                 <div id="answers">
