--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button class="answer">Answer 3</button>
                 </div>
                 <div id="progress-bar">
+                    <div id="progress-bar-full"></div>
                 </div>
             </div>
         </div>
