Finished link with progress bar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="answer">Answer 3</button>
                 </div>
                 <div id="progress-bar">
-                    <div id="progress-bar-full"></div>
+                    <div id="progress-bar-full" data-done="0"></div>
                 </div>
             </div>
         </div>
