Finished navigating to result page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
                     <div id="progress-bar-full" data-done="0"></div>
                 </div>
             </div>
+
+            <div id="result-container" class="hide">
+                <h1>This is the result page!</h1>
+                <div id="score-container"></div>
+                <div id="tips-container"></div>
+                <div id="answers-container"></div>
+            </div>
         </div>
     </div>
 </body>
