--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                     <h1 id="start-title">Test your diet choices</h1>
                     <div id="start-intro-1">A healthy and versatile diet is the sum of its parts. There are many ways to
                         build a good diet. The most frequent food choices you make in everyday life are decisive.</div>
-                    <div id="start-intro-2">This test will give an indicative assessment of the healthiness of your diet.
+                    <div id="start-intro-2">This test will give an indicative assessment of the healthiness of your
+                        diet.
                     </div>
                     <button id="start-btn">Start test</button>
                 </div>
             </div>
-            
+
             <div id="quiz-container" class="hide">
                 <div id="progress">Question 1/14:</div>
                 <div id="question">Question 1?</div>
@@ -41,10 +42,29 @@
             </div>
 
             <div id="result-container" class="hide">
-                <h1>This is the result page!</h1>
-                <div id="score-container"></div>
-                <div id="tips-container"></div>
-                <div id="answers-container"></div>
+                <div id="result-container-1">
+                    <div id="score-container">
+                        <div id="result-intro-1">Have you thought about your own diet?</div>
+                        <div id="score">Your score: 13/37</div>
+                        <div id="result-intro-2">Based on the test, it would appear that by making changes to your diet, your health might improve. 
+                            By comparing your answers below the page, you can see what changes your diet would improve.</div>
+                    </div>
+                </div>
+                <div id="result-container-2">
+                    <div id="result-intro-3">A few tips for improving the quality of your diet:</div> 
+                    <ul>
+                        <li>Eat vegetables at every meal.</li>
+                        <li>Replace light grain products with whole grain products.</li>
+                        <li>Pay attention to the use of salt and the amount of salt in the products. Select a product with less salt.</li>
+                        <li>Eat fresh fruits and berries instead of sugar delicacies.</li>
+                        <li>Swap food containing red meat for fish, chicken or vegetable protein.</li>
+                    </ul>
+                    <button id="rerun-btn">RERUN THE TEST</button>
+                </div>
+                <div id="divider"></div>
+                <div id="result-container-3">
+                    <!-- All quiz answers go here -->
+                </div>
             </div>
         </div>
     </div>
