--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="quiz-app">
         <h1 id="title">Healthy Diet Quiz</h1>
         <div id="wrapper">
-            <div id="start-container">
+            <div id="start-container" class="hide">
                 <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
                 <div id="description">
                     <h1 id="start-title">Test your diet choices</h1>
@@ -41,21 +41,24 @@
                 </div>
             </div>
 
-            <div id="result-container" class="hide">
+            <div id="result-container">
                 <div id="result-container-1">
                     <div id="score-container">
                         <div id="result-intro-1">Have you thought about your own diet?</div>
                         <div id="score">Your score: 13/37</div>
-                        <div id="result-intro-2">Based on the test, it would appear that by making changes to your diet, your health might improve. 
-                            By comparing your answers below the page, you can see what changes your diet would improve.</div>
+                        <div id="result-intro-2">Based on the test, it would appear that by making changes to your diet,
+                            your health might improve.
+                            By comparing your answers below the page, you can see what changes your diet would improve.
+                        </div>
                     </div>
                 </div>
                 <div id="result-container-2">
-                    <div id="result-intro-3">A few tips for improving the quality of your diet:</div> 
+                    <div id="result-intro-3">A few tips for improving the quality of your diet:</div>
                     <ul>
                         <li>Eat vegetables at every meal.</li>
                         <li>Replace light grain products with whole grain products.</li>
-                        <li>Pay attention to the use of salt and the amount of salt in the products. Select a product with less salt.</li>
+                        <li>Pay attention to the use of salt and the amount of salt in the products. Select a product
+                            with less salt.</li>
                         <li>Eat fresh fruits and berries instead of sugar delicacies.</li>
                         <li>Swap food containing red meat for fish, chicken or vegetable protein.</li>
                     </ul>
@@ -63,7 +66,42 @@
                 </div>
                 <div id="divider"></div>
                 <div id="result-container-3">
-                    <!-- All quiz answers go here -->
+                    <div id="result-panel">
+                        <div id="progress">1/14</div>
+                        <div id="question">I dispense food on my plate in general.</div>
+                        <div id="answer-panel">
+                            <div id="answer">first taking the main course on the plate and also the salad if there is
+                                room on the plate</div>
+                            <div id="score">0 points</div>
+                        </div>
+                        <div id="answer-panel">
+                            <div id="answer">first taking the main courselso the salad if there is
+                                room on the plate</div>
+                            <div id="score">2 points</div>
+                        </div>
+                        <div id="answer-panel">
+                            <div id="answer">first there is room on the plate</div>
+                            <div id="score">4 points</div>
+                        </div>
+                    </div>
+                    <div id="result-panel">
+                        <div id="progress">1/14</div>
+                        <div id="question">I dispense food on my plate in general.</div>
+                        <div id="answer-panel">
+                            <div id="answer">first taking the main course on the plate and also the salad if there is
+                                room on the plate</div>
+                            <div id="score">0 points</div>
+                        </div>
+                        <div id="answer-panel">
+                            <div id="answer">first taking the main courselso the salad if there is
+                                room on the plate</div>
+                            <div id="score">2 points</div>
+                        </div>
+                        <div id="answer-panel">
+                            <div id="answer">first there is room on the plate</div>
+                            <div id="score">4 points</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
