Finished display shuffled q&a

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <!-- For testing, rightclick on index.html and start live server, start code under this line -->
     <div id="quiz-app">
         <h1 id="title">Healthy Diet Quiz</h1>
         <div id="wrapper">
-            <div id="start-container" class="hide">
+            <div id="start-container">
                 <img src="/Assets/StartImg.jfif" alt="FoodAppImg">
                 <div id="description">
                     <h1 id="start-title">Test your diet choices</h1>
@@ -41,7 +40,7 @@
                 </div>
             </div>
 
-            <div id="result-container">
+            <div id="result-container" class="hide">
                 <div id="result-container-1">
                     <div id="score-container">
                         <div id="result-intro-1">Have you thought about your own diet?</div>
@@ -66,40 +65,36 @@
                 </div>
                 <div id="divider"></div>
                 <div id="result-container-3">
-                    <div id="result-panel">
-                        <div id="progress">1/14</div>
-                        <div id="question">I dispense food on my plate in general.</div>
-                        <div id="answer-panel">
-                            <div id="answer">first taking the main course on the plate and also the salad if there is
-                                room on the plate</div>
-                            <div id="score">0 points</div>
+                    <div class="result-panel">
+                        <div class="progress">1/14</div>
+                        <div class="question">Quesiton 1</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 1</div>
+                            <div class="score">0 points</div>
                         </div>
-                        <div id="answer-panel">
-                            <div id="answer">first taking the main courselso the salad if there is
-                                room on the plate</div>
-                            <div id="score">2 points</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 2</div>
+                            <div class="score">2 points</div>
                         </div>
-                        <div id="answer-panel">
-                            <div id="answer">first there is room on the plate</div>
-                            <div id="score">4 points</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 3</div>
+                            <div class="score">4 points</div>
                         </div>
                     </div>
-                    <div id="result-panel">
-                        <div id="progress">1/14</div>
-                        <div id="question">I dispense food on my plate in general.</div>
-                        <div id="answer-panel">
-                            <div id="answer">first taking the main course on the plate and also the salad if there is
-                                room on the plate</div>
-                            <div id="score">0 points</div>
+                    <div class="result-panel">
+                        <div class="progress">2/14</div>
+                        <div class="question">Quesiton 2</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 1</div>
+                            <div class="score">0 points</div>
                         </div>
-                        <div id="answer-panel">
-                            <div id="answer">first taking the main courselso the salad if there is
-                                room on the plate</div>
-                            <div id="score">2 points</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 2</div>
+                            <div class="score">2 points</div>
                         </div>
-                        <div id="answer-panel">
-                            <div id="answer">first there is room on the plate</div>
-                            <div id="score">4 points</div>
+                        <div class="answer-panel">
+                            <div class="answer">Answer 3</div>
+                            <div class="score">4 points</div>
                         </div>
                     </div>
                 </div>
